@@ -1,0 +1,9 @@
+language: perl
+sudo: false
+perl:
+  - "5.10"
+  - "5.12"
+  - "5.14"
+  - "5.18"
+  - "5.26"
+  - "5.28"
