@@ -1,10 +1,8 @@
-=pod
-
-=head1 NAME
+# NAME
 
 MooseX::BuildArgs - Save the original constructor arguments for later use.
 
-=head1 SYNOPSIS
+# SYNOPSIS
 
 Create a class that uses this module:
 
@@ -16,11 +14,11 @@ Create a class that uses this module:
     my $object = MyClass->new( foo => 32 );
     print $object->build_args->{foo};
 
-=head1 DESCRIPTION
+# DESCRIPTION
 
 Sometimes it is very useful to have access to the contructor arguments before builders,
-defaults, and coercion take affect.  This module provides a build_args hashref attribute
-for all instances of the consuming class.  The build_args attribute contains all arguments
+defaults, and coercion take affect.  This module provides a build\_args hashref attribute
+for all instances of the consuming class.  The build\_args attribute contains all arguments
 that were passed to the constructor.
 
 A contrived case for this module would be for creating a clone of an object, so you could
@@ -30,13 +28,11 @@ duplicate an object with the following code:
     my $obj2 = MyClass->new( $obj1->build_args() );
     print $obj2->foo();
 
-=head1 AUTHOR
+# AUTHOR
 
 Aran Clary Deltac <bluefeet@gmail.com>
 
-=head1 LICENSE
+# LICENSE
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
-
-=cut
